--- a/app/src/main/res/layout/activity_ranking_page.xml
+++ b/app/src/main/res/layout/activity_ranking_page.xml
@@ -29,13 +29,24 @@
         android:layout_margin="10dp"
         android:layout_below="@+id/TextViewOverallTitle" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewRanking"
         android:layout_below="@+id/button3"
-        android:layout_centerHorizontal="true"
-        android:choiceMode="none"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        >
+
+
+    </android.support.v7.widget.RecyclerView>
+
+    <!--<ListView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/listViewRanking"-->
+        <!--android:layout_below="@+id/button3"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:choiceMode="none"-->
+        <!--android:layout_margin="10dp" />-->
 
 </RelativeLayout>
