--- a/app/src/main/res/layout/row_ranking.xml
+++ b/app/src/main/res/layout/row_ranking.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     >
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout">
+
     <TextView
         android:id="@+id/tv_ranking"
         android:layout_width="wrap_content"
@@ -24,22 +31,17 @@
         android:layout_toEndOf="@+id/tv_ranking"
         android:layout_marginStart="60dp" />
 
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100 Points"
-        android:layout_marginRight="49dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="49dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-
+        android:layout_marginRight="39dp"
+        android:layout_marginEnd="39dp" />
 
 
 </RelativeLayout>
