1) Improve Step Sensor

--- a/app/src/main/res/layout/activity_main_menu_appbar_2.xml
+++ b/app/src/main/res/layout/activity_main_menu_appbar_2.xml
@@ -183,7 +183,8 @@
                             android:id="@+id/StepNumber"
                             android:textSize="25dp"
                             android:textColor="@color/white"
-                            android:layout_toRightOf="@+id/StepNumberTitle" />
+                            android:layout_toRightOf="@+id/StepNumberTitle"
+                            android:text="0" />
                     </RelativeLayout>
                 </TableRow>
 
