--- a/app/src/main/res/layout/activity_schedule_pause_alarm.xml
+++ b/app/src/main/res/layout/activity_schedule_pause_alarm.xml
@@ -6,20 +6,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="my.com.taruc.fitnesscompanion.UI.SchedulePauseAlarm"
-    android:background="#36f136"
-    android:onClick="stopAlarm">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textViewAlarmDesc"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="242dp"
-        android:layout_marginEnd="242dp"
-        android:background="#82f33b" />
+    android:background="@android:color/transparent">
 
 </RelativeLayout>
