--- a/app/src/main/res/layout/activity_add_goal_fragment.xml
+++ b/app/src/main/res/layout/activity_add_goal_fragment.xml
@@ -22,4 +22,12 @@
         android:layout_gravity="center_horizontal"
         android:hint="Target amount" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/inputGoalDuration"
+        android:hint="Target DAY(s)" />
+
 </LinearLayout>
