--- a/app/src/main/res/layout/activity_exercise_menu.xml
+++ b/app/src/main/res/layout/activity_exercise_menu.xml
@@ -7,7 +7,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="my.com.taruc.fitnesscompanion.UI.ExerciseMenu">
+    tools:context="my.com.taruc.fitnesscompanion.UI.ExercisePage">
 
     <Spinner
         android:layout_width="fill_parent"
