--- a/app/src/main/res/layout/activity_goal_page.xml
+++ b/app/src/main/res/layout/activity_goal_page.xml
@@ -17,28 +17,28 @@
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="Reduce Weight"
         android:id="@+id/textViewMyGoal"
         android:textColor="@android:color/white"
         android:textSize="25dp"
         android:background="#fff89d4f"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/buttonNext" />
+        android:layout_below="@+id/textViewGoalTitle"
+        android:paddingTop="2dp" />
 
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewMyGoal"
-        android:id="@+id/contentTable"
-        android:layout_marginTop="50dp">
+        android:layout_below="@+id/donut_progress"
+        android:id="@+id/contentTable">
         <TableRow
             android:background="#ffd95763"
             android:layout_marginBottom="10dp"
             android:gravity="center_vertical">
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/current_goal_icon"
                 android:id="@+id/imageCurrentStatus"
                 android:layout_column="1" />
@@ -47,29 +47,33 @@
                 android:layout_column="2"
                 android:id="@+id/txtCurrentEqual"
                 android:textColor="@android:color/white"
-                android:textSize="40dp"/>
+                android:textSize="40dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:id="@+id/txtCurrentAmount"
-                android:textSize="40dp"
+                android:textSize="25dp"
                 android:textColor="@android:color/white"
-                android:layout_column="3"/>
+                android:layout_column="3"
+                android:layout_gravity="center_vertical|right" />
             <TextView
                 android:text="KG"
                 android:layout_column="4"
                 android:id="@+id/txtCurrentUnit"
                 android:textColor="@android:color/white"
-                android:textSize="40dp"
-                android:layout_marginLeft="5dp" />
+                android:textSize="25dp"
+                android:layout_marginLeft="5dp"
+                android:layout_gravity="center_vertical|right" />
         </TableRow>
         <TableRow
             android:background="#ffaeba36"
             android:gravity="center_vertical">
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/goal_aim"
                 android:id="@+id/imageTargetStatus"
                 android:padding="5dp"
@@ -79,7 +83,9 @@
                 android:layout_column="2"
                 android:id="@+id/txtTargetEqual"
                 android:textColor="@android:color/white"
-                android:textSize="40dp"/>
+                android:textSize="40dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,14 +96,16 @@
                 android:layout_toEndOf="@+id/textViewTargetStatus"
                 android:textColor="@android:color/white"
                 android:layout_column="3"
-                android:textSize="40dp"/>
+                android:textSize="25dp"
+                android:layout_gravity="center_vertical|right" />
             <TextView
                 android:text="KG"
                 android:id="@+id/txtTargetUnit"
                 android:layout_column="4"
                 android:textColor="@android:color/white"
-                android:textSize="40dp"
-                android:layout_marginLeft="5dp" />
+                android:textSize="25dp"
+                android:layout_marginLeft="5dp"
+                android:layout_gravity="center_vertical|right" />
         </TableRow>
     </TableLayout>
 
@@ -106,10 +114,10 @@
         android:layout_height="wrap_content"
         android:text="EDIT"
         android:id="@+id/buttonEditGoal"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="false"
         android:onClick="editGoal"
-        android:layout_below="@+id/contentTable"
-        android:layout_marginTop="10dp" />
+        android:layout_toLeftOf="@+id/buttonDeleteGoal"
+        android:layout_alignTop="@+id/buttonDeleteGoal" />
 
     <Button
         android:layout_width="wrap_content"
@@ -117,21 +125,19 @@
         android:text="ADD"
         android:id="@+id/buttonAddGoal"
         android:onClick="addGoal"
-        android:layout_toRightOf="@+id/buttonEditGoal"
-        android:layout_below="@+id/contentTable"
+        android:layout_alignParentBottom="false"
         android:layout_alignTop="@+id/buttonEditGoal"
-        android:layout_alignParentBottom="true" />
+        android:layout_toLeftOf="@+id/buttonEditGoal" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELETE"
         android:id="@+id/buttonDeleteGoal"
-        android:layout_alignTop="@+id/buttonAddGoal"
-        android:layout_toRightOf="@+id/buttonAddGoal"
-        android:layout_toEndOf="@+id/buttonAddGoal"
         android:onClick="deleteGoal"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -140,8 +146,12 @@
         android:id="@+id/buttonNext"
         android:onClick="nextGoal"
         android:layout_alignParentBottom="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentTop="false"
+        android:layout_alignParentRight="true"
+        android:textColor="@android:color/white"
+        android:background="@android:color/transparent"
+        android:gravity="center_vertical|right"
+        android:layout_alignBottom="@+id/donut_progress" />
 
     <Button
         android:layout_width="wrap_content"
@@ -150,7 +160,53 @@
         android:id="@+id/buttonPrevious"
         android:onClick="previousGoal"
         android:layout_alignParentBottom="false"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="true"
+        android:gravity="center_vertical|left"
+        android:background="@android:color/transparent"
+        android:textColor="@android:color/white"
+        android:layout_alignBottom="@+id/donut_progress" />
+
+    <com.github.lzyzsd.circleprogress.DonutProgress
+        android:id="@+id/donut_progress"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        custom:donut_progress="0"
+        android:layout_below="@+id/textViewDurationDate"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewDurationDate"
+        android:textColor="@android:color/white"
+        android:textSize="12dp"
+        android:background="#fff89d4f"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/textViewMyGoal"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Goal Created"
+        android:id="@+id/textViewNoGoal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="40dp"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewGoalTitle"
+        android:textColor="@android:color/white"
+        android:textSize="12dp"
+        android:background="#fff89d4f"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/buttonDeleteGoal"
+        android:layout_centerHorizontal="true"
+        android:text="Goal Title" />
 
 </RelativeLayout>
 </ScrollView>
