--- a/app/src/main/res/layout/graph_view.xml
+++ b/app/src/main/res/layout/graph_view.xml
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;activity>"
+                android:text="-"
                 android:id="@+id/ActivityDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -110,7 +110,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;start time>"
+                android:text="-"
                 android:id="@+id/StartTimeDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -143,7 +143,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;end time>"
+                android:text="-"
                 android:id="@+id/EndTimeDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -176,7 +176,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;duration>"
+                android:text="-"
                 android:id="@+id/DurationDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -209,7 +209,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;step num>"
+                android:text="-"
                 android:id="@+id/StepNumDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -242,7 +242,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;calories>"
+                android:text="-"
                 android:id="@+id/CaloriesDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -275,7 +275,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;distance>"
+                android:text="-"
                 android:id="@+id/DistanceDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
@@ -308,7 +308,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="&lt;ave HR>"
+                android:text="-"
                 android:id="@+id/AveHRDisplay"
                 android:layout_column="2"
                 android:textSize="20dp"
