--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -40,6 +40,7 @@
                 android:id="@+id/imageView2"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
+                android:src="@drawable/user_profile"
                 android:layout_centerHorizontal="true"
                 />
             <Button
