1. update all ui 2. fix goal 3. fix step sensitivity 4. update db attribute 5. update graph 6. update exercise page

--- a/app/src/main/res/layout/exercise_spiiner_item.xml
+++ b/app/src/main/res/layout/exercise_spiiner_item.xml
@@ -8,6 +8,7 @@
         android:textColor="#FFFFFF"
         android:padding="5dip"
         android:background="#ff6600aa"
-        android:gravity="left" />
+        android:gravity="left"
+    android:id="@+id/SpinnerBackground" />
 
 
