--- a/app/src/main/res/layout/activity_goal_page.xml
+++ b/app/src/main/res/layout/activity_goal_page.xml
@@ -9,10 +9,6 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="my.com.taruc.fitnesscompanion.UI.GoalPage">
 
     <TextView
@@ -24,8 +20,10 @@
         android:textSize="25dp"
         android:background="#fff89d4f"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/textViewGoalTitle"
-        android:paddingTop="2dp" />
+        android:paddingTop="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@+id/buttonDeleteGoal" />
 
     <TableLayout
         android:layout_width="fill_parent"
@@ -35,10 +33,12 @@
         <TableRow
             android:background="#ffd95763"
             android:layout_marginBottom="10dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/current_goal_icon"
                 android:id="@+id/imageCurrentStatus"
                 android:layout_column="1" />
@@ -70,10 +70,12 @@
         </TableRow>
         <TableRow
             android:background="#ffaeba36"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/goal_aim"
                 android:id="@+id/imageTargetStatus"
                 android:padding="5dp"
@@ -137,7 +139,9 @@
         android:onClick="deleteGoal"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/textViewTitle"
+        android:layout_marginRight="20dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -151,7 +155,8 @@
         android:textColor="@android:color/white"
         android:background="@android:color/transparent"
         android:gravity="center_vertical|right"
-        android:layout_alignBottom="@+id/donut_progress" />
+        android:layout_alignBottom="@+id/donut_progress"
+        android:layout_marginRight="20dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -165,7 +170,8 @@
         android:gravity="center_vertical|left"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
-        android:layout_alignBottom="@+id/donut_progress" />
+        android:layout_alignBottom="@+id/donut_progress"
+        android:layout_marginLeft="20dp" />
 
     <com.github.lzyzsd.circleprogress.DonutProgress
         android:id="@+id/donut_progress"
@@ -173,7 +179,9 @@
         android:layout_height="300dp"
         custom:donut_progress="0"
         android:layout_below="@+id/textViewDurationDate"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -184,7 +192,9 @@
         android:background="#fff89d4f"
         android:gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/textViewMyGoal"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -199,14 +209,31 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewGoalTitle"
-        android:textColor="@android:color/white"
-        android:textSize="12dp"
-        android:background="#fff89d4f"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/buttonDeleteGoal"
+        android:text="Goal"
+        android:id="@+id/textViewTitle"
+        android:textSize="30dp"
+        android:textColor="#ff4b5070"
+        android:background="@drawable/color_rainbow"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Goal Title" />
+        android:layout_marginBottom="10dp" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewBackButton"
+        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
+        android:onClick="BackAction"
+        android:layout_alignTop="@+id/textViewTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignLeft="@+id/textViewTitle"
+        android:layout_alignBottom="@+id/textViewTitle"
+        android:paddingRight="15dp" />
 
 </RelativeLayout>
 </ScrollView>
