--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,8 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="my.com.taruc.fitnesscompanion.UI.ProfilePage"
     android:background="#ff4b5070">
 
@@ -10,24 +8,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:id="@+id/titleButtonLayout">
-        <ImageView
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:id="@+id/imageView3"
-            android:src="@drawable/user_profile_title"
-            android:onClick="GoHealthProfile"
-            android:layout_marginBottom="-60dp"
-            android:layout_marginTop="-50dp" />
+        android:id="@+id/titleButtonLayout"
+        android:layout_below="@+id/textViewTitle"
+        android:layout_marginTop="20dp">
 
-        <ImageView
+        <TextView
             android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:id="@+id/imageView4"
-            android:src="@drawable/health_profile_title"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewUserProfile"
+            android:src="@drawable/user_profile_title"
             android:onClick="GoUserProfile"
-            android:layout_marginTop="-50dp"
-            android:layout_marginBottom="-60dp" />
+            android:clickable="true"
+            android:text="User Profile"
+            android:textSize="20dp"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewHealthProfile"
+            android:src="@drawable/health_profile_title"
+            android:onClick="GoHealthProfile"
+            android:clickable="true"
+            android:text="Health Profile"
+            android:textSize="20dp"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal" />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
@@ -37,5 +44,31 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/titleButtonLayout"
         android:layout_marginTop="20dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Profile"
+        android:id="@+id/textViewTitle"
+        android:textSize="30dp"
+        android:textColor="#ff4b5070"
+        android:background="@drawable/color_rainbow"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewBackButton"
+        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
+        android:onClick="BackAction"
+        android:paddingRight="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/textViewTitle"
+        android:layout_alignLeft="@+id/textViewTitle"
+        android:layout_alignBottom="@+id/textViewTitle" />
 
 </RelativeLayout>
