--- a/app/src/main/res/layout/graph_view.xml
+++ b/app/src/main/res/layout/graph_view.xml
@@ -1,9 +1,15 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#ff4b5070">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
     android:background="#ff4b5070">
 
     <Button
@@ -15,7 +21,10 @@
         android:hint="Previous Day"
         android:textColor="@android:color/white"
         android:background="@android:color/transparent"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_below="@+id/textViewHistoryTitle"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +32,8 @@
         android:id="@+id/DateDisplay"
         android:layout_toRightOf="@id/previousDay"
         android:textColor="@android:color/white"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_below="@+id/textViewHistoryTitle" />
 
     <Button
         android:layout_width="wrap_content"
@@ -35,13 +45,16 @@
         android:hint="Next Day"
         android:textColor="@android:color/white"
         android:background="@android:color/transparent"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_below="@+id/textViewHistoryTitle" />
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:id="@+id/graph"
-        android:layout_below="@id/previousDay"/>
+        android:layout_below="@id/previousDay"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -49,7 +62,10 @@
         android:layout_below="@+id/graph"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:id="@+id/TableDetail"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -316,4 +332,56 @@
         </TableRow>
     </TableLayout>
 
+    <at.markushi.ui.CircleButton
+        android:layout_width="64dip"
+        android:layout_height="64dip"
+        app:cb_color="#99CC00"
+        app:cb_pressedRingWidth="8dip"
+        android:id="@+id/changeViewButton"
+        android:layout_below="@+id/TableDetail"
+        android:layout_alignParentRight="true"
+        android:onClick="changeView"
+        android:layout_marginRight="20dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Real Time History"
+        android:id="@+id/textViewHistoryTitle"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:background="@drawable/color_rainbow"
+        android:textSize="30dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="#ff4b5070"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewBackButton"
+        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
+        android:onClick="BackAction"
+        android:layout_alignTop="@+id/textViewHistoryTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/textViewHistoryTitle"
+        android:paddingRight="15dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change view ->"
+        android:id="@+id/textView"
+        android:layout_alignBottom="@+id/changeViewButton"
+        android:layout_toLeftOf="@+id/changeViewButton"
+        android:layout_alignTop="@+id/changeViewButton"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#fefdfd" />
+
 </RelativeLayout>
+
+    </ScrollView>
