--- a/app/src/main/res/layout/activity_goal_page.xml
+++ b/app/src/main/res/layout/activity_goal_page.xml
@@ -41,7 +41,8 @@
                     android:layout_height="40dp"
                     android:src="@drawable/current_goal_icon"
                     android:id="@+id/imageCurrentStatus"
-                    android:layout_column="1" />
+                    android:layout_column="1"
+                    android:layout_marginLeft="20dp" />
                 <TextView
                     android:text="="
                     android:layout_column="2"
@@ -79,7 +80,8 @@
                     android:src="@drawable/goal_aim"
                     android:id="@+id/imageTargetStatus"
                     android:padding="5dp"
-                    android:layout_column="1"/>
+                    android:layout_column="1"
+                    android:layout_marginLeft="20dp" />
                 <TextView
                     android:text="="
                     android:layout_column="2"
