--- a/app/src/main/res/layout/activity_main_menu_appbar_2.xml
+++ b/app/src/main/res/layout/activity_main_menu_appbar_2.xml
@@ -25,171 +25,166 @@
             tools:context="my.com.taruc.fitnesscompanion.UI.MainMenu"
             android:padding="0dp">
 
-            <TableLayout
+            <!-- step num -->
+            <RelativeLayout
+                android:id="@+id/StepNumberArea"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:id="@+id/menuTable"
                 android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:layout_marginBottom="20dp">
+                android:gravity="center_horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/StepNumberTitle"
+                    android:text="Step Number : "
+                    android:textSize="18dp"
+                    android:textColor="@color/white"
+                    android:layout_marginBottom="20dp"
+                    android:layout_alignParentBottom="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/StepNumber"
+                    android:textSize="100dp"
+                    android:textColor="@color/white"
+                    android:text="0"
+                    android:layout_toRightOf="@+id/StepNumberTitle"
+                    android:gravity="bottom" />
 
-                <TableRow android:id="@+id/LogoRow">
-                    <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:id="@+id/imageViewlogo"
-                        android:src="@drawable/fitness_run_icon"
-                        android:layout_column="0"
-                        android:layout_marginTop="20dp" />
-                </TableRow>
-                <TableRow android:id="@+id/LogoTitle">
-                    <TextView
-                        android:id="@+id/txtLogoTitle"
-                        android:text="Fitness Companion"
-                        android:textColor="@android:color/white"
-                        android:textSize="15dp"
-                        android:layout_column="0"
-                        android:layout_gravity="center"/>
-                </TableRow>
-                <TableRow android:layout_gravity="center">
-                    <RelativeLayout android:layout_gravity="center">
-                        <ImageView
-                            android:layout_width="200dp"
-                            android:layout_height="200dp"
-                            android:id="@+id/imageViewStartExercise"
-                            android:src="@drawable/menu_start"
-                            android:clickable="true"
-                            android:onClick="GoExerciseMenu"
-                            android:layout_marginLeft="30dp"
-                            android:layout_marginTop="20dp" />
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/imageViewGoal"
-                            android:src="@drawable/menu_goal"
-                            android:clickable="true"
-                            android:onClick="GoGoal"
-                            android:layout_toRightOf="@+id/imageViewStartExercise"
-                            android:layout_marginTop="40dp" />
-                        <TextView
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"
-                            android:text="Goal"
-                            android:textColor="@android:color/white"
-                            android:textSize="15dp"
-                            android:layout_below="@+id/imageViewGoal"
-                            android:layout_alignLeft="@+id/imageViewGoal"
-                            android:id="@+id/GoalTitle" />
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/imageViewSchedule"
-                            android:src="@drawable/menu_schedule"
-                            android:clickable="true"
-                            android:onClick="GoSchedule"
-                            android:layout_alignLeft="@+id/imageViewGoal"
-                            android:layout_below="@+id/GoalTitle"
-                            android:layout_marginLeft="10dp" />
-                        <TextView
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"
-                            android:text="Schedule"
-                            android:textColor="@android:color/white"
-                            android:textSize="15dp"
-                            android:layout_gravity="center"
-                            android:layout_alignLeft="@+id/imageViewGoal"
-                            android:id="@+id/ScheduleTitle"
-                            android:layout_below="@+id/imageViewSchedule"
-                            android:layout_marginLeft="10dp" />
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/imageViewAchievement"
-                            android:src="@drawable/menu_achievement"
-                            android:clickable="true"
-                            android:onClick="GoAchievementMenu"
-                            android:layout_below="@+id/ScheduleTitle"
-                            android:layout_alignLeft="@+id/imageViewGoal" />
-                        <TextView
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"
-                            android:text="Achievement"
-                            android:textColor="@android:color/white"
-                            android:textSize="15dp"
-                            android:layout_gravity="center"
-                            android:id="@+id/AchievementTitle"
-                            android:layout_alignLeft="@+id/imageViewGoal"
-                            android:layout_below="@+id/imageViewAchievement" />
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/imageViewProfile"
-                            android:src="@drawable/menu_profile"
-                            android:clickable="true"
-                            android:onClick="GoProfileMenu"
-                            android:layout_below="@+id/imageViewStartExercise"
-                            android:layout_marginLeft="-20dp"
-                            android:layout_alignRight="@+id/imageViewStartExercise" />
-                        <TextView
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"
-                            android:text="Profile"
-                            android:textColor="@android:color/white"
-                            android:textSize="15dp"
-                            android:id="@+id/ProfileTitle"
-                            android:layout_below="@+id/imageViewProfile"
-                            android:layout_alignLeft="@+id/imageViewProfile"
-                            android:layout_marginLeft="10dp" />
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/imageViewFriends"
-                            android:src="@drawable/menu_friend"
-                            android:clickable="true"
-                            android:onClick="GoFriends"
-                            android:layout_below="@+id/imageViewStartExercise"
-                            android:layout_toLeftOf="@+id/imageViewProfile"
-                            android:layout_marginRight="30dp"
-                            android:layout_marginTop="10dp" />
-                        <TextView
-                            android:layout_width="60dp"
-                            android:layout_height="40dp"
-                            android:text="Friend"
-                            android:textColor="@android:color/white"
-                            android:textSize="15dp"
-                            android:layout_gravity="left"
-                            android:layout_column="1"
-                            android:id="@+id/FriendTitle"
-                            android:layout_below="@+id/imageViewFriends"
-                            android:layout_alignLeft="@+id/imageViewFriends"
-                            android:layout_marginRight="20dp" />
-                    </RelativeLayout>
-                </TableRow>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/imageView"
+                    android:src="@drawable/fitness_run_icon"
+                    android:layout_column="1"
+                    android:layout_toLeftOf="@+id/StepNumber"
+                    android:layout_below="@+id/StepNumberTitle"
+                    android:layout_alignLeft="@+id/StepNumberTitle" />
+            </RelativeLayout>
 
-                <!-- step num -->
-                <TableRow>
-                    <RelativeLayout android:layout_column="0">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/StepNumberTitle"
-                            android:text="Step Number : "
-                            android:textSize="10dp"
-                            android:textColor="@color/white" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/StepNumber"
-                            android:textSize="25dp"
-                            android:textColor="@color/white"
-                            android:layout_toRightOf="@+id/StepNumberTitle"
-                            android:text="0" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="1.5dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/textViewWhiteline"
+                android:layout_alignParentTop="false"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="false"
+                android:textColor="@android:color/white"
+                android:background="@android:color/white"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_below="@+id/StepNumberArea"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" />
 
-                    </RelativeLayout>
-                </TableRow>
+            <RelativeLayout android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:id="@+id/Menu"
+                android:layout_below="@+id/textViewWhiteline">
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/imageViewStartExercise"
+                    android:src="@drawable/menu_start"
+                    android:clickable="true"
+                    android:onClick="GoExerciseMenu"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="20dp" />
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:id="@+id/imageViewGoal"
+                    android:src="@drawable/menu_goal"
+                    android:clickable="true"
+                    android:onClick="GoGoal"
+                    android:layout_toRightOf="@+id/imageViewStartExercise"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="10dp" />
+                <TextView
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="Goal"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:layout_below="@+id/imageViewGoal"
+                    android:id="@+id/GoalTitle"
+                    android:gravity="center"
+                    android:layout_alignLeft="@+id/imageViewGoal"
+                    android:layout_alignRight="@+id/imageViewGoal" />
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:id="@+id/imageViewSchedule"
+                    android:src="@drawable/menu_schedule"
+                    android:clickable="true"
+                    android:onClick="GoSchedule"
+                    android:layout_below="@+id/GoalTitle"
+                    android:layout_marginLeft="35dp"
+                    android:layout_toRightOf="@+id/imageViewStartExercise"
+                    android:layout_marginTop="10dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Schedule"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/ScheduleTitle"
+                    android:layout_below="@+id/imageViewSchedule"
+                    android:gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignLeft="@+id/imageViewSchedule" />
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:id="@+id/imageViewAchievement"
+                    android:src="@drawable/menu_achievement"
+                    android:clickable="true"
+                    android:onClick="GoAchievementMenu"
+                    android:layout_below="@+id/ScheduleTitle"
+                    android:layout_toRightOf="@+id/imageViewStartExercise"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="-10dp" />
+                <TextView
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="Achievement"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/AchievementTitle"
+                    android:layout_alignLeft="@+id/imageViewAchievement"
+                    android:layout_below="@+id/imageViewAchievement"
+                    android:gravity="center"
+                    android:layout_marginLeft="-20dp" />
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:id="@+id/imageViewProfile"
+                    android:src="@drawable/menu_profile"
+                    android:clickable="true"
+                    android:onClick="GoProfileMenu"
+                    android:layout_below="@+id/imageViewStartExercise"
+                    android:layout_alignRight="@+id/imageViewStartExercise"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="20dp" />
+                <TextView
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="Profile"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:id="@+id/ProfileTitle"
+                    android:layout_below="@+id/imageViewProfile"
+                    android:layout_alignLeft="@+id/imageViewProfile"
+                    android:gravity="center"
+                    android:layout_marginLeft="-30dp" />
 
-            </TableLayout>
+            </RelativeLayout>
+
+
         </RelativeLayout>
         </ScrollView>
 
