--- a/app/src/main/res/layout/schedule_new_page.xml
+++ b/app/src/main/res/layout/schedule_new_page.xml
@@ -18,18 +18,19 @@
         android:padding="5dp"
         android:textColor="@android:color/white"
         android:textSize="25dp"
-        android:id="@+id/textViewScheduleTitle"
-        android:layout_alignParentTop="true"
+        android:id="@+id/textViewAddReminder"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/textViewTitle" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="400dp"
         android:layout_weight="1"
-        android:layout_below="@+id/textViewScheduleTitle"
+        android:layout_below="@+id/textViewAddReminder"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
 
@@ -47,6 +48,32 @@
         android:layout_marginRight="30dp"
         android:textColor="@android:color/black"
         android:onClick="addNewReminder" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder"
+        android:id="@+id/textViewTitle"
+        android:textSize="30dp"
+        android:textColor="#ff4b5070"
+        android:background="@drawable/color_rainbow"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewBackButon"
+        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
+        android:onClick="BackAction"
+        android:paddingRight="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/textViewTitle" />
 
 </RelativeLayout>
 
