--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -65,7 +65,6 @@
                     android:layout_column="1"
                     android:gravity="right"
                     android:text="@string/email"
-                    android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="18dp"
                     android:layout_marginRight="10dp" />
@@ -107,12 +106,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:textSize="18dp"
                     android:background="@drawable/field_border"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textColor="@android:color/white"
+                    android:inputType="text"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp" />
             </TableRow>
@@ -215,10 +215,13 @@
                     android:layout_height="wrap_content"
                     android:layout_column="2"
                     android:textSize="18dp"
+                    android:digits="0123456789"
                     android:background="@drawable/field_border"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textColor="@android:color/white"
+                    android:inputType="phone"
+                    android:maxLength="3"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp" />
 
@@ -254,11 +257,14 @@
                     android:layout_height="wrap_content"
                     android:layout_column="2"
                     android:textSize="18dp"
+                    android:digits="0123456789"
                     android:background="@drawable/field_border"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textColor="@android:color/white"
+                    android:inputType="phone"
                     android:paddingTop="8dp"
+                    android:maxLength="3"
                     android:paddingBottom="8dp" />
 
                 <TextView
@@ -331,19 +337,6 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/fillInForm"
             android:padding="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/GCM"
-            android:textSize="25dp"
-            android:textColor="@color/white"
-            android:text="0"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/signUpTab"
-            android:layout_toEndOf="@+id/signUpTab"
-            android:layout_marginLeft="29dp"
-            android:layout_marginStart="29dp" />
 
     </RelativeLayout>
 
