--- a/app/src/main/res/layout/activity_goal_page.xml
+++ b/app/src/main/res/layout/activity_goal_page.xml
@@ -115,8 +115,8 @@
         </TableLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_add_white_24dp"
             android:id="@+id/buttonAddGoal"
             android:onClick="addGoal"
@@ -126,8 +126,8 @@
             android:layout_marginLeft="20dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_edit_white_24dp"
             android:id="@+id/buttonEditGoal"
             android:onClick="editGoal"
@@ -137,8 +137,8 @@
             android:layout_marginRight="5dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_delete_white_24dp"
             android:id="@+id/buttonDeleteGoal"
             android:onClick="deleteGoal"
